load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cron",
    srcs = [
        "setup.go",
        "workflow.go",
    ],
    importpath = "github.com/smartcontractkit/capabilities/integration_tests/cron",
    visibility = ["//visibility:public"],
    deps = [
        "//integration_tests/utils",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/services/servicetest",
        "@com_github_smartcontractkit_chainlink_v2//core/capabilities/integration_tests/framework",
        "@com_github_smartcontractkit_chainlink_v2//core/logger",
        "@com_github_smartcontractkit_chainlink_v2//core/services/job",
        "@com_github_smartcontractkit_chainlink_v2//core/testdata/testspecs",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "cron_test",
    srcs = ["cron_test.go"],
    embed = [":cron"],
    deps = [
        "//integration_tests/utils",
        "@com_github_smartcontractkit_chainlink_v2//core/capabilities/integration_tests/framework",
        "@com_github_smartcontractkit_chainlink_v2//core/logger",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
